@@ -1,4 +1,8 @@
 14 July 2021 Petasis George <petasis@iit.demokritos.gr>:
+ * clarin-angular/src/app/components/controls/button/annotation-button/annotation-button.component.ts:
+ Fixed a bug in button selection login, where previsously selected button were
+ not deselected if selected from the overlapping area selection widget.
+
  * clarin-angular/src/app/components/controls/overlapping-areas/overlapping-areas.component.html:
  * clarin-angular/src/app/components/controls/overlapping-areas/overlapping-areas.component.ts:
  * clarin-angular/src/app/components/controls/text-widget/text-widget.component.ts:
